# Coronan

./: CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
apps/cli/: CMakeLists.txt  main.cpp  plotting_sciplot.cpp  plotting_sciplot.hpp
apps/cli/tests/: CMakeLists.txt  plotting_sciplot_test.cpp
doc/.doctrees/: environment.pickle
